<?xml version="1.0" encoding="utf-8"?> <!-- Othmane Feriani-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_header1">
        <fragment
            android:name="com.example.sarah.ateliergl.HeaderFragment"
            android:id="@+id/fragment_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ></fragment>
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/fragment_header1"
        android:layout_marginTop="-5dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="Logo milieu"
        app:srcCompat="@mipmap/client_connexion_foreground" />

    <TextView
        android:id="@+id/textview_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView2"
        android:layout_centerHorizontal="true"
        android:text="@string/CONNEXION_email"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:layout_marginTop="0dp"/>

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/textview_email"
        android:layout_centerHorizontal="true"
        android:hint="@string/CONNEXION_email_hint"
        android:textSize="12sp"
        android:layout_marginTop="3dp"
        android:drawableLeft="@drawable/ic_action_mail"


        />

    <TextView
        android:id="@+id/textview_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/CONNEXION_password"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/textview_password"
        android:layout_centerHorizontal="true"
        android:hint="@string/CONNEXION_password_hint"
        android:textSize="12sp"
        android:layout_marginTop="3dp"
        android:drawableLeft="@drawable/ic_action_password"
        android:inputType="textPassword"



        />

    <TextView
        android:id="@+id/textview_inscription"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/CONNEXION_sinscrire"
        android:textColor="@android:color/black"
        android:textSize="12sp"/>
    <TextView
        android:id="@+id/textview_password_oublier"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_inscription"
        android:layout_centerHorizontal="true"
        android:text="@string/CONNEXION_password_oublier"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        />



    <android.support.v7.widget.CardView
        android:id="@+id/cardview2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="#f0c40d">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textColor="#fff"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </android.support.v7.widget.CardView>




</RelativeLayout>